cambio de nuevo a danger

--- a/src/app/producto/lista-producto.component.html
+++ b/src/app/producto/lista-producto.component.html
@@ -18,7 +18,7 @@
             <td>{{producto.price}}</td>
             <td><button class="btn btn-primary" routerLink="/detalle/{{producto.id}}">Ver</button></td>
             <td *ngIf="user === 'admin'"><button class="btn btn-warning" routerLink="/actualizar/{{producto.id}}">Editar</button></td>
-            <td *ngIf="user === 'admin'"><button class="btn btn-warning" (click)="onDelete(producto.id)">Borrar</button></td>
+            <td *ngIf="user === 'admin'"><button class="btn btn-danger" (click)="onDelete(producto.id)">Borrar</button></td>
           </tr>
         </tbody>
       </table>
