--- a/src/app/producto/lista-producto.component.html
+++ b/src/app/producto/lista-producto.component.html
@@ -16,12 +16,15 @@
             <td>{{producto.id}}</td>
             <td>{{producto.productName}}</td>
             <td>{{producto.price}}</td>
-            <td><button class="btn btn-primary" routerLink="/detalle/{{producto.id}}">Ver</button></td>
-            <td *ngIf="user === 'admin'"><button class="btn btn-info" routerLink="/actualizar/{{producto.id}}">Editar</button></td>
-            <td *ngIf="user === 'admin'"><button class="btn btn-danger" (click)="onDelete(producto.id)">Eliminar</button></td>
+            <td><button mat-flat-button color="primary" routerLink="/detalle/{{producto.id}}">Ver</button></td>
+            <td *ngIf="user === 'admin'"><button mat-flat-button color="primary" routerLink="/actualizar/{{producto.id}}">Editar</button></td>
+            <td *ngIf="user === 'admin'"><button mat-flat-button color="warn" (click)="onDelete(producto.id)">Eliminar</button></td>
+           
             
           </tr>
         </tbody>
       </table>
+      
+      
       <div><button class="btn btn-success btn-lg" routerLink="/nuevo">Nuevo Producto</button></div>
     </div>
