--- a/src/app/producto/lista-producto.component.html
+++ b/src/app/producto/lista-producto.component.html
@@ -18,7 +18,7 @@
             <td>{{producto.price}}</td>
             <td><button mat-flat-button color="primary" routerLink="/detalle/{{producto.id}}">Ver</button></td>
             <td *ngIf="user === 'admin'"><button mat-flat-button color="primary" routerLink="/actualizar/{{producto.id}}">Editar</button></td>
-            <td *ngIf="user === 'admin'"><button mat-flat-button color="warn" (click)="onDelete(producto.id)">Eliminar</button></td>
+            <td *ngIf="user === 'admin'"><button mat-flat- color="warn" (click)="onDelete(producto.id)">Eliminar</button></td>
            
             
           </tr>
