--- a/src/app/producto/lista-producto.component.html
+++ b/src/app/producto/lista-producto.component.html
@@ -13,12 +13,12 @@
         </thead>
         <tbody>
           <tr *ngFor="let producto of productos">
-            <td>{{producto.id}}</td>
-            <td>{{producto.productName}}</td>
-            <td>{{producto.price}}</td>
-            <td><button mat-flat-button color="primary" routerLink="/detalle/{{producto.id}}">Ver</button></td>
-            <td *ngIf="user === 'admin'"><button mat-flat-button color="primary" routerLink="/actualizar/{{producto.id}}">Editar</button></td>
-            <td *ngIf="user === 'admin'"><button mat-flat-button color="warn" (click)="onDelete(producto.id)">Eliminar</button></td>
+            <td>{{producto.asdasd}}</td>
+            <td>{{producto.asdasd}}</td>
+            <td>{{producto.asd}}</td>
+            <td><button mat-flat-button color="primary" routeasdasdrLink="/detalle/{{producto.id}}">Ver</button></td>
+            <td *ngIf="user === 'admin'"><button mat-flat-basdasdutton color="primary" routerLink="/actualizar/{{producto.id}}">Editar</button></td>
+            <td *ngIf="user === 'admin'"><button asdasd-flat-button color="warn" (click)="onDelete(producto.id)">Eliminar</button></td>
            
             
           </tr>
