--- a/src/app/producto/lista-producto.component.html
+++ b/src/app/producto/lista-producto.component.html
@@ -13,10 +13,10 @@
         </thead>
         <tbody>
           <tr *ngFor="let producto of productos">
-            <td>{{producto.id}}</td>
-            <td>{{producto.productName}}</td>
-            <td>{{producto.price}}</td>
-            <td><button mat-flat-button color="primary" routerLink="/detalle/{{producto.id}}">Ver</button></td>
+            <td>{{producto.id}} asdasd</td>
+            <td>{{producto.productName}}asdasdads</td>
+            <td>{{producto.price}}asdasda</td>
+            <td><button mat-flat-button color="primary" routerLink="/detalle/{{producto.id}}">Ver</button></td> 
             <td *ngIf="user === 'admin'"><button mat-flat-button color="primary" routerLink="/actualizar/{{producto.id}}">Editar</button></td>
             <td *ngIf="user === 'admin'"><button mat-flat-button color="warn" (click)="onDelete(producto.id)">Eliminar</button></td>
            
